--- a/index.html
+++ b/index.html
@@ -4,36 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Netflix Clone</title>
-	<link rel="stylesheet" href="styles.css" />
+	<title>My Projects</title>
 </head>
 <body>
-	<img class="logo" src="logo.jpeg" />	
-	<div class="container">
-		<h1 class="title">Who's watching?</h1>
-
-		<div class="profiles">
-			<div>
-
-			<img src="profile.jpeg" />
-			<p>User</p>
-			</div>
-			<div>
-
-			<img src="profile.jpeg" />
-			<p>User</p>
-			</div>
-			<div>
-
-				<svg xmlns="http://www.w3.org/2000/svg" height="auto" viewBox="0 0 24 24" width="200px" fill="#778899"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"/></svg>
-				<p>Add profile</p>
-			</div>
-		</div>
-		
-		
-		<div class="manage-profiles">
-			Manage Profiles
-		</div>	
-	</div>
+	<a href="netflix-login/index.html">Netflix Login</a>	
 </body>
 </html>
