added lazy loading

--- a/netflix-login/index.html
+++ b/netflix-login/index.html
@@ -15,12 +15,12 @@
 		<div class="profiles">
 			<div>
 
-			<img src="profile.jpeg" />
+			<img src="profile.jpeg" loading="lazy" alt="User Pic" />
 			<p>User</p>
 			</div>
 			<div>
 
-			<img src="profile.jpeg" />
+			<img src="profile.jpeg" loading="lazy" alt="User Pic" />
 			<p>User</p>
 			</div>
 			<div>
