--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<a href="netflix-login/index.html">Netflix Login</a>	
+	<a href="netflix-login/index.html">Netflix Login</a>
+	<a href="instagram-home/index.html">Instagram Home Page</a>	
 </body>
 </html>
