Added kp's day5 challenge solution

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
 	<a href="netflix-login/index.html">Netflix Login</a>
 	<a href="instagram-home/index.html">Instagram Home Page</a>	
+	<a href="css-21-days-day5/index.html">CSS 21 Days - Day 5</a>	
 </body>
 </html>
